# ark-mcp

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  NOTICE.txt  README.md  THIRD_PARTY_LICENSES.md  config.example.yaml
.github/: config.example.yaml  copilot-instructions.md
assets/: README.md  dev_root.crt  dev_server.key  dev_server.pem  dev_signing.key  dev_signing.pem
docker/: Dockerfile  README.md  config.non-tls.yaml  config.tls.yaml  config.yaml
docker/.temp/: .gitignore
docs/: architecture.md  identity-entra-setup.md  identity-google-setup.md
migrations/: README.md
migrations/sqlite/: V001__initial_schema.sql
scripts/: .gitignore  about.toml  extract-licenses.ps1  markdown.hbs  vars-sample-entra.ps1  vars-sample-google.ps1
src/: errors.rs  lib.rs  main.rs  state.rs  utility.rs
src/config/: components.rs  defaults.rs  mod.rs  models.rs  plugins.rs
src/metrics/: handler.rs  mod.rs
src/plugins/: builtin.rs  mod.rs  oci.rs  registry.rs  url.rs  wasm.rs
src/server/: api_handlers.rs  auth.rs  constants.rs  health_handlers.rs  mcp.rs  mod.rs  roles.rs  service.rs  signing.rs
src/server/handlers/: api.rs  auth.rs  health.rs  mod.rs  oauth.rs  session.rs
src/server/persist/: mod.rs  models.rs
tests/: api.rs  auth_comprehensive.rs  auth_error_handling.rs  auth_integration.rs  auth_protection.rs  auth_security.rs  bind.rs  concurrent_migrations_lock.rs  config.rs  integration_jwks_token.rs  mcp_ownership.rs  mcp_sse_integration.rs  migrations_filesystem.rs  persist_integration.rs  plugins.rs  real_mcp_sse_security.rs  signing.rs
tests/test_keys/: test_rsa.key
tests/testdata/: hash_plugin.wasm  sample.wasm  sample2.wasm
www/: THIRD_PARTY_LICENSES.md  ark.config.schema.json  globals.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  vite.config.ts
www/src/: App.css  App.tsx  index.css
www/src/components/: ErrorBoundary.tsx
www/src/components/ui/: alert-banner.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  footer.tsx  form.tsx  hover-card.tsx  input.tsx  json-schema-section.tsx  login-button.tsx  main-panel-header.tsx  plugin-list-header.tsx  plugin-list-item.tsx  plugins-list.tsx  settings-form.tsx  tabs.tsx  theme-toggle.tsx  title-bar.tsx  tools-header.tsx  tools-list-item.tsx
www/src/components/ui/metrics/: AvgLatencyCard.tsx  HealthReadinessCard.tsx  LatencyOverTimeCard.tsx  McpRequestsCard.tsx  ThroughputCard.tsx  ToolCallsCard.tsx  ToolLatencyCard.tsx
www/src/lib/: auth.ts  chart-colors.ts  config.ts  mcp-client.ts  metrics-bus.ts  theme.ts
www/src/vite-plugins/: react-hooks-plugin.ts
www/test-results/: .last-run.json
www/tests/: auth-behavior.spec.ts
xtask/: Cargo.toml
xtask/src/: main.rs
